[package]
name = "containerd-runh-shim"
version = "0.1.1"
authors = [
    "Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
    "Shaobao Feng <fshb1988@gmail.com>",
    "Tianyang Zhang <burning9699@gmail.com>",
    "The containerd Authors",
]
description = "Rust implementation of containerd's runh v2 shim runtime"
keywords = ["containerd", "shim", "containers"]
categories = ["api-bindings", "asynchronous"]
edition = "2021"
license = "Apache-2.0"

[workspace]
members = [
  "crates/runh",
]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/hermit-os/containerd-runh-shim"
homepage = "https://hermit-os.org"
edition = "2021"

# Common dependencies for all crates
[workspace.dependencies]
async-trait = "0.1.52"
cgroups-rs = "0.3.4"
crossbeam = "0.8.1"
futures = "0.3.19"
libc = "0.2.112"
log = {version = "0.4.2", features=["kv_unstable"]}
nix = "0.29"
oci-spec = "0.6"
os_pipe = "1.1"
prctl = "1.0.0"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = { version = "5.0", default-features = false }
tempfile = "3.6"
thiserror = "1.0"
time = { version = "0.3.29", features = ["serde", "std", "formatting"] }
tokio = "1.26"
tonic = "0.12"
tonic-build = "0.12"
tower = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "containerd-shim-runh-v2"
path = "src/main.rs"
doc = false

[dependencies]
containerd-shim = { version = "0.7.4", features = ["async"] }
libc.workspace = true
log.workspace = true
nix = { workspace = true, features = ["socket", "uio", "term"] }
oci-spec.workspace = true
prctl.workspace = true
runh = { path = "crates/runh", version = "0.2.0", features = ["async"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

# Async dependencies
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs.workspace = true
nix = { workspace = true, features = ["event"] }

